# LocalAgents

./: .gitignore  AGENT_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  README.md  loop_test.txt  main.py  pyproject.toml  resp.md  test_inference_new.py  test_persistence.txt  test_verification.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
agents/: __init__.py  chrome_agent.py  command_line_agent.py  orchestrator.py
agents/prompts/: chrome_agent.md  default.md  self_agent.md
agents/sub_agents/: __init__.py  chrome_agent.py  self_agent.py
app/: main.py  protocol.py  state.py  telegram_bot.py
app/api/: ws_router.py
app/modules/: __init__.py  telegram.py
app/static/: README.md  style.css
app/templates/: base.j2  chat.j2  index.j2  observability.j2  partial.j2  self.j2  sts.j2
channels/: __init__.py  base.py  telegram_channel.py  websocket_channel.py
core/: __init__.py  audio.py  config.py  engine.py  errors.py  inference.py  integrations.py  logger.py  logging_core.py  observability.py  responses.py  retry.py  sts.py  sts_backends.py  sts_ffmpeg.py  stt.py  stt_backends.py  stt_registry.py  tools.py  tts.py  tts_backends.py  tts_registry.py  utils.py
core/interfaces/: peripherals.py
db/: __init__.py  connection.py
experimental/: __init__.py  base.py  mlx_tts.py  mlx_tts_worker.py  qwen3_asr.py  qwen3_asr_worker.py
prompts/: chrome_agent.md  command_line_agent.md  default.md  orchestrator.md  render_template.j2  tools_instructions.j2
team/: __init__.py  chrome_agent.py  command_line_agent.py  orchestrator_agent.py
tests/: test_ws.py  verify_orchestrator.py
workflows/: __init__.py
(+29 files in other folders)
