[project]
name = "appleshortcuts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.4",
    "jinja2>=3.1.6",
    "openai>=2.15.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
